RabbitMQ/base/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: rabbitmq
    app.kubernetes.io/name: myrabbit
    app.kubernetes.io/part-of: rabbitmq
  name: rabbitmq-prometheus-headless
spec:
  clusterIP: None
  ports:
  - name: prometheus
    port: 15692
    protocol: TCP
    targetPort: 15692
  selector:
    app.kubernetes.io/name: rsp
    sessionAffinity: None
  type: ClusterIP
